cabal-version: 2.4
name: language-server
version: 0
synopsis: Language Server Protocol
homepage: https://github.com/ekmett/codex/tree/master/language-server#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2017-2019 Edward Kmett
stability: experimental
category: Language, Compiler, IDE
build-type: Simple
description:
  This module supplies tools for working with the Language Server Protocol.
extra-doc-files:
  README.md,
  CHANGELOG.md
extra-source-files:
  test/data/*.golden

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: language-server

common app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

common base
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base >= 4.12 && < 5

library
  import: base
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    aeson, bytestring, data-default, filepath, hashable, lens,
    lens-aeson, template-haskell, text, unordered-containers, uri-encode
  hs-source-dirs: src
  other-modules:
    Language.Server.TH
  exposed-modules:
    Language.Server.Builder
    Language.Server.Parser
    Language.Server.Protocol

test-suite tasty 
  import: app, base
  main-is: Main.hs
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules: MessageTest
  build-depends:
    aeson,
    bifunctors,
    bytestring,
    containers,
    filepath,
    language-server,
    lens,
    QuickCheck,
    tagged,
    tasty >= 0.11,
    tasty-quickcheck,
    tasty-golden >= 2.3,
    tasty-hunit >= 0.9,
    text
