cabal-version: 2.2
name: linewrap
version: 0
synopsis: Not an implementation of the Knuth & Plass line wrap algorithm.
description: Not an implementation of the Knuth & Plass line wrap algorithm.
homepage: https://github.com/ekmett/codex/tree/master/linewrap#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Sean Chalmers
maintainer: Sean Chalmers <schalmers@protonmail.com>
copyright: Copyright (c) 2019 Sean Chalmers
stability: experimental
category: Text
build-type: Simple

extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  build-depends: base >= 4.11 && < 5,
                 lens,
                 mtl,
                 vector,
                 containers,
                 hyphenation,
                 text,
                 bytestring,
                 smawk,

library
  import: base
  hs-source-dirs: src
  ghc-options: -Wmissing-export-lists
  exposed-modules: Data.LineWrap
                 , Data.LineWrap.BruteForce
                 , Data.LineWrap.DynamicProg
                 , Data.LineWrap.ShortestPath
                 , Data.LineWrap.BinarySearch
                 , Data.LineWrap.Linear
                 , Data.LineWrap.Types
  -- build-depends: base >= 4.11 && < 5

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
                linewrap
              , tasty
              , hedgehog
              , tasty-hunit
              , tasty-hedgehog
