cabal-version: 2.2
name: parsnip
version: 0
synopsis: A minimal parser
description: A minimal parser
homepage: https://github.com/ekmett/codex/tree/master/parsnip#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md
data-files:
  shaders/*.frag,
  shaders/*.vert

source-repository head
  type: git
  location: https://github.com/ekmett/codex

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    attoparsec,
    base >= 4.11 && < 5,
    bytestring,
    containers,
    data-default,
    parser-combinators,

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Text.Parsnip
    Text.Parsnip.Char8
    Text.Parsnip.Internal
    Text.Parsnip.Location
    Text.Parsnip.Parser
