cabal-version: 2.2
name: primitive-extras
version: 0
synopsis: Primitive extras
homepage: https://github.com/ekmett/codex/tree/master/primitive-extras#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description:
  Primitive extras,
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: primitive-extras

library
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  hs-source-dirs: src
  build-depends:
    base >= 4.11 && < 5,
    const,
    ghc-prim,
    hashable,
    primitive,
    StateVar >= 1.1 && < 1.3,
    stm,
    transformers
  exposed-modules:
    Control.Monad.IOST
    Control.Monad.IOST.Unsafe
    Control.Monad.Primitive.Class
    Control.Monad.Primitive.Unlift
    Data.Primitive.Key
    Data.Primitive.Key.Coercible
    Data.Primitive.StateVar
    Data.Primitive.Unique
