cabal-version: 2.2
name: primitive-unlift
version: 0
synopsis: unliftio-core for primitive
homepage: https://github.com/ekmett/codex/tree/master/primitive-unlift#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description:
  Unlifting Primitives
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: primitive-unlift

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    base >= 4.11 && < 5,
    ghc-prim,
    primitive,
    primitive-statevar,
    transformers
  exposed-modules:
    Control.Monad.Primitive.Unlift
    Control.Monad.IOST
    Control.Monad.IOST.Unsafe
