cabal-version: 2.2
name: ptrdiff
version: 0
synopsis: Type-checked pointer diffs
homepage: https://github.com/ekmett/codex/tree/master/ptrdiff#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description: Type-checked pointer diffs.
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: ptrdiff

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends: base >= 4.11 && < 5
  exposed-modules:
    Foreign.Ptr.Diff
