cabal-version: 2.4
name: stb-truetype
version: 0
synopsis: Wrappr for the stb-truetype library
description: Wrappr for the stb-truetype library
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett and Sean Chalmers
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett, Sean Chalmers
stability: experimental
category: Graphics
build-type: Simple
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: stb-truetype

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-tool-depends: hsc2hs:hsc2hs
  pkgconfig-depends:
    stb_truetype >= 1.22,
    stb_rect_pack >= 1.00
  exposed-modules:
    Graphics.STB.TrueType.Internal
    Graphics.STB.TrueType
  ghc-options: -optc -Wno-pointer-sign
  build-depends:
    base >=4.13 && <5,
    -- bytestring,
    containers >= 0.6,
    -- ghc-prim,
    -- hashable,
    inline-c,
    -- primitive,
    -- primitive-extras,
    -- template-haskell,
    -- transformers,
    linear

test-suite stb-truetype-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends:
    base >=4.13 && <5
