cabal-version: 2.2
name: tabulation-hash
version: 0
synopsis: Simple tabulation hashing
homepage: https://github.com/ekmett/codex/tree/master/tabulation-hash#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: Data Structures, Algorithms
build-type: Simple
description:
  This package provides a variant of simple tabulation hashing
extra-doc-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: tabulation-hash

common base
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    base >= 4.11 && < 5

library
  import: base
  hs-source-dirs: src
  build-depends:
    generics-sop,
    ghc-prim,
    mwc-random,
    primitive
  exposed-modules:
    Data.Tabulation.Hash
