cabal-version: 2.2
name: watch
version: 0
synopsis: Mini-adapton
homepage: https://github.com/ekmett/codex/tree/master/watch#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description:
  This package provides a variant of mini-adapton.
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    base >= 4.11 && < 5,
    hashable,
    primitive,
    transformers,
    unique,
    unordered-containers
  exposed-modules:
    Data.Watch
    Data.Watch.Internal
