cabal-version: 2.2
name: watch
version: 0
synopsis: Mini-adapton
homepage: https://github.com/ekmett/codex/tree/master/watch#readme
license: BSD-2-Clause OR Apache-2.0
license-file: LICENSE.md
author: Edward Kmett
maintainer: Edward Kmett <ekmett@gmail.com>
copyright: Copyright (c) 2019 Edward Kmett
stability: experimental
category: FFI
build-type: Simple
description:
  This package provides a variant of mini-adapton.
extra-doc-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ekmett/codex
  subdir: watch

common base
  default-language: Haskell2010
  build-depends:
    base >= 4.11 && < 5,
    primitive
  
library
  import: base
  hs-source-dirs: src
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -Wmissing-export-lists
  build-depends:
    hashable,
    primitive-extras,
    transformers,
    unique,
    unliftio-core,
    unordered-containers
  exposed-modules:
    Data.Watch
    Data.Watch.Internal

test-suite spec
  import: base
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
    hspec, 
    tasty,
    tasty-hspec,
    watch
